--- a/root/index.html
+++ b/root/index.html
@@ -13,7 +13,7 @@
 <body class="admin-panel">
   <div class="logo_burger">
     <div class="logo-img">
-      <img class="logo" src="images/logo.png" alt="logo">
+      <img class="logo" src="../src/images/logo.png" alt="logo">
     </div>
     <div class="burger">
       <i class="fas fa-bars"></i>
@@ -38,7 +38,7 @@
     <div class="sidebar-manager">
       <p>Your manager</p>
       <div class="manager-avatar">
-        <img src="images/profile_manager.png" alt="manager">
+        <img src="../src/images/profile_manager.png" alt="manager">
         <p>Mikhael E.</p>
       </div>
     </div>
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="graph">
-          <img src="./images/graph.png" alt="graph">
+          <img src="../src/images/graph.png" alt="graph">
         </div>
       </div>
     </section>
@@ -222,7 +222,7 @@
     </div>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="../src/js/script.js"></script>
 
 </body>
 
